# background_effect_tools

./: .gitignore  CMakeLists.txt  README.md  build.bat  buildspec.json  install.bat  vcpkg.json
data/effects/: clouds.effect  dotlight.effect  flame.effect  glowline.effect  particle.effect  spotlight.effect  viz.effect
data/locale/: en-US.ini  ja-JP.ini
src/: bgfx-audio.c  bgfx-audio.h  bgfx-effect.h  bgfx-glowline.c  bgfx-glowline.h  bgfx-particles.c  bgfx-particles.h  bgfx-props.c  bgfx-props.h  bgfx-registry.c  bgfx-registry.h  bgfx-source.c  bgfx-source.h  effect-audioviz.c  effect-audioviz.h  effect-beatspot.c  effect-beatspot.h  effect-bubble.c  effect-bubble.h  effect-clouds.c  effect-clouds.h  effect-dotlight.c  effect-dotlight.h  effect-embers.c  effect-embers.h  effect-flame.c  effect-flame.h  effect-geometric.c  effect-geometric.h  effect-gravity.c  effect-gravity.h  effect-imgparticle.c  effect-imgparticle.h  effect-magiccircle.c  effect-magiccircle.h  effect-radial.c  effect-radial.h  effect-smoke.c  effect-smoke.h  effect-snow.c  (+12 more)
